[gd_scene load_steps=3 format=3 uid="uid://dbqcl04om0kls"]

[ext_resource type="Script" uid="uid://cxn3u8kqfb05x" path="res://levels/win.gd" id="1_1mqau"]
[ext_resource type="Theme" uid="uid://dym7h64funxyg" path="res://components/UIDefault.tres" id="2_1j8er"]

[node name="Win" type="Control"]
z_index = 5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1mqau")

[node name="Bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.823529)

[node name="WinLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 140.0
offset_top = 97.0
offset_right = 1140.0
offset_bottom = 317.0
grow_horizontal = 0
theme = ExtResource("2_1j8er")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 200
text = "Win!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreCounter" type="Label" parent="."]
layout_mode = 0
offset_left = 213.0
offset_top = 341.0
offset_right = 1083.0
offset_bottom = 429.0
theme = ExtResource("2_1j8er")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "Score:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="."]
custom_minimum_size = Vector2(308, 84)
layout_mode = 0
offset_left = 198.0
offset_top = 555.0
offset_right = 506.0
offset_bottom = 639.0
mouse_default_cursor_shape = 2
theme = ExtResource("2_1j8er")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "RESTART"
flat = true

[node name="QuitButton" type="Button" parent="."]
custom_minimum_size = Vector2(308, 84)
layout_mode = 0
offset_left = 735.0
offset_top = 555.0
offset_right = 1043.0
offset_bottom = 651.0
mouse_default_cursor_shape = 2
theme = ExtResource("2_1j8er")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "QUIT"
flat = true

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
